# LazySequence-Generator-SmartPointers

./: ArraySequence.h  CMakeLists.txt  Cardinal.h  Deck.h  DynamicArray.h  Generator.h  ImmutableArraySequence.h  LazySequence.h  LazySequenceTest  LazySequenceTest.cpp  LinkedList.h  LinkedSequence.h  LinkedSequenceImmutable.h  LinkedSequenceMutable.h  MutableArraySequence.h  Queue.h  ReadOnlyStream.h  Sequence.h  SmartPointer.h  Stack.h  TuringMachine.h  WriteOnlyStream.h  check  check.cpp  main  main.cpp  main_LazySequence  main_LazySequence.cpp  main_MachineTuring  main_MachineTuring.cpp  main_SmartPointer  main_SmartPointer.cpp  results.csv  tm_tape_trace.txt  vizualisation.py
LazySequenceTest.dSYM/Contents/: Info.plist
LazySequenceTest.dSYM/Contents/Resources/DWARF/: LazySequenceTest
LazySequenceTest.dSYM/Contents/Resources/Relocations/aarch64/: LazySequenceTest.yml
SmartPointer.dSYM/Contents/Resources/DWARF/: SmartPointer
SmartPointer.dSYM/Contents/Resources/Relocations/aarch64/: SmartPointer.yml
check.dSYM/Contents/Resources/DWARF/: check
check.dSYM/Contents/Resources/Relocations/aarch64/: check.yml
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
main_LazySequence.dSYM/Contents/: Info.plist
main_LazySequence.dSYM/Contents/Resources/DWARF/: main_LazySequence
main_MachineTuring.dSYM/Contents/: Info.plist
main_MachineTuring.dSYM/Contents/Resources/DWARF/: main_MachineTuring
main_SmartPointer.dSYM/Contents/: Info.plist
main_SmartPointer.dSYM/Contents/Resources/DWARF/: main_SmartPointer
(+3 files in other folders)
